--- a/css/main.css
+++ b/css/main.css
@@ -3,13 +3,47 @@
     padding: 0;
     box-sizing: border-box;
 }
+/*Modal*/
+.modal {
+
+    z-index: 3;
+    display: none;
+    padding-top: 100px;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+
+}
+.animate-zoom {
+    animation: animatezoom 0.6s;
+}
+.modal-content {
+    margin: auto;
+    background-color: #fff;
+    position: relative;
+    padding: 0;
+    outline: 0;
+    width: 600px;
+}
+
+.modal_input {
+    padding: 8px;
+    display: block;
+    width: 100%;
+}
+
 
 /*Header*/
 #header {
     width: 100%;
-    background-color:#000;
+    background-color: #000;
     color: #fff;
-    top:0;
+    top: 0;
     box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
     overflow: hidden;
 }
@@ -20,19 +54,19 @@
 }
 
 /*User Actions*/
-#user-actions{
+#user-actions {
     flex-grow: 1;
     margin-right: 0.5rem;
-   /* flex: 20%;*/
+    /* flex: 20%;*/
 }
 
 /*Login Form*/
-#login-form{
+#login-form {
     padding: 0.5rem;
 }
 
 /*Content*/
-#content{
+#content {
     /*background-color: blue;*/
     flex-grow: 4;
     /*flex: 20%;*/
@@ -41,22 +75,23 @@
     flex-wrap: wrap;
 }
 
-.product{
+.product {
     margin: 0.5rem;
     padding: 0.5rem;
 }
 
 /*Cart*/
-#cart{
-    
+#cart {
+
     flex-grow: 1;
-     padding: 0.5rem;
-   /* flex: 20%;*/
+    padding: 0.5rem;
+    /* flex: 20%;*/
 
 }
-.cart-list-item{
+
+.cart-list-item {
     width: 100%;
-    
+
 }
 
 /**/
